Update src/main/java/com/studylibrary/util/PerformanceBenchmark.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>